# convergent_assignment

./: .gitignore  README.md  documentation.md  run.sh
client/: pnpm-lock.yaml
docs/: coach_prompts.md  persona_prompts.md  prompts.json
server/: .env.example  bot.py  coach.py  conversation_aggregator.py  feedback_viewer.py  guardrail_service.py  prompts_loader.py  pyproject.toml  session_logger.py
server/.coach/feedback/: per_turn_01_33_26_04_09_2025.json
server/.coach/session_evals/: session_eval_01_33_26_04_09_2025.md
server/.coach/transcripts/: transcript_01_33_26_04_09_2025.json  transcript_with_interims_01_33_26_04_09_2025.json
